# cc-plugin-catalog

./: CLAUDE.md  README.md  hello.py  pyproject.toml
.claude/rules/: no-direct-push.md
.claude/skills/release/: SKILL.md
.github/workflows/: build-pages.yml  ci.yml  publish.yml
src/cc_plugin_catalog/: __init__.py  builder.py  cli.py  markdown_utils.py  models.py  parser.py  renderer.py  scanner.py
src/cc_plugin_catalog/templates/: base.html  category.html  index.html  plugin.html
src/cc_plugin_catalog/templates/static/: style.css  theme.js
tests/: conftest.py  test_builder.py  test_cli.py  test_markdown_utils.py  test_models.py  test_parser.py  test_renderer.py  test_scanner.py
tests/fixtures/sample_marketplace/.claude-plugin/: marketplace.json
tests/fixtures/sample_marketplace/plugins/full-plugin/: .lsp.json  .mcp.json  LICENSE  README.md
tests/fixtures/sample_marketplace/plugins/full-plugin/.claude-plugin/: plugin.json
tests/fixtures/sample_marketplace/plugins/full-plugin/agents/: security-reviewer.md
tests/fixtures/sample_marketplace/plugins/full-plugin/hooks/: hooks.json
tests/fixtures/sample_marketplace/plugins/full-plugin/skills/code-review/: SKILL.md
tests/fixtures/sample_marketplace/plugins/full-plugin/skills/deploy/: SKILL.md
tests/fixtures/sample_marketplace/plugins/minimal-plugin/.claude-plugin/: plugin.json
